manifests/components/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    component: api
spec:
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

      automountServiceAccountToken: false

      containers:
        - name: main
          image: localhost:15000/sensorenregister/api:latest
          imagePullPolicy: Always # IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 1
              memory: "512Mi"
            limits:
              cpu: 1
              memory: "512Mi"
          volumeMounts:
            - mountPath: /secrets
              name: secrets
              readOnly: true
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
            httpGet:
              path: /status/health
              port: http
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: secrets
