manifests/components/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    component: app
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    component: api
